<resources>
    <string name="app_name">Pizza</string>
    <string name="pizzaBaslik">Beef Cheese</string>
    <string name="peynirYazi">Cheese</string>
    <string name="sucukYazi">Sausage</string>
    <string name="zeytinYazi">Olive</string>
    <string name="biberYazi">Pepper</string>
    <string name="teslimatSure">20 min</string>
    <string name="teslimatBaslik">Delivery</string>
    <string name="pizzaAciklama">Pizza lovers , get ready to meet best pizza you will ever eat</string>
    <string name="fiyatYazi">$5.98</string>
    <string name="sepetYazi">ADD TO CART</string>


</resources>